fix(secretary): broken styles

--- a/src/app/secretary/academic-secretary/academic-secretary.component.css
+++ b/src/app/secretary/academic-secretary/academic-secretary.component.css
@@ -105,6 +105,12 @@
   }
 }
 
+@media (max-width: 992px) {
+  .centraliza {
+    justify-content: center;
+  }
+}
+
 @media (max-width: 767px) {
   .button-wrapper {
     justify-content: center;
